--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -65,8 +65,9 @@
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="fr-col-12">
-                <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
+                <div class="fr-mb-2w fr-pt-2w block--row-strech">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
@@ -84,15 +85,17 @@
                 </div>
             </div>
             {% if convention|display_back_to_instruction:request %}
+                <hr>
                 <div class="fr-col-12">
-                    <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
+                    <div class="fr-mb-2w fr-pt-2w block--row-strech">
                         {% include "conventions/actions/back_to_instruction.html" %}
                     </div>
                 </div>
             {% endif %}
             <div class="fr-col-12">
                 {% if request|is_instructeur %}
-                    <div class="fr-mb-5w fr-pt-2w apilos-line-top">
+                    <hr>
+                    <div class="fr-mb-5w fr-pt-2w">
                         <div class="fr-my-2w">
                             <p class="fr-alert__title">
                                 Résiliation/dénonciation de la convention
