--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -65,8 +65,8 @@
                                     {% if request|is_instructeur %}
                                         Vous pouvez <a class="fr-link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "sent" %}aria-current="page"{% endif %}>téléverser l'avenant signé</a>
                                     {% else %}
-                                        {% if convention.administration.adresse and convention.administration.code_postal and convention.administration.ville %}
-                                            <p>Imprimez-le, signez-le et envoyez le à l'adresse suivante : {{ convention.administration.adresse }} - {{ convention.administration.code_postal }} {{ convention.administration.ville }}</p>
+                                        {% if convention.programme.administration.adresse and convention.programme.administration.code_postal and convention.programme.administration.ville %}
+                                            <p>Imprimez-le, signez-le et envoyez le à l'adresse suivante : {{ convention.programme.administration.adresse }} - {{ convention.programme.administration.code_postal }} {{ convention.programme.administration.ville }}</p>
                                         {% endif %}
                                     {% endif %}
                                 {% elif convention|display_redirect_post_action %}
