--- a/templates/conventions/recapitulatif/annexes.html
+++ b/templates/conventions/recapitulatif/annexes.html
@@ -10,15 +10,7 @@
                             Annexes
                         </h4>
                     </div>
-                    {% if convention|display_convention_form_progressbar %}
-                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
-                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                        </a>
-                    {% else %}
-                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:avenant_annexes' convention_uuid=convention.uuid %}" >
-                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                        </a>
-                    {% endif %}
+                    {% include "conventions/actions/goto.html" %}
                 </div>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
                     <table>
