--- a/templates/conventions/recapitulatif/bailleur.html
+++ b/templates/conventions/recapitulatif/bailleur.html
@@ -9,17 +9,7 @@
                             Bailleur
                         </h4>
                     </div>
-                    {% if convention|display_convention_form_progressbar %}
-                        {% if convention.is_avenant %}
-                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:avenant_bailleur' convention_uuid=convention.uuid %}" >
-                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                            </a>
-                        {% else %}
-                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:bailleur' convention_uuid=convention.uuid %}" >
-                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                            </a>
-                        {% endif %}
-                    {% endif %}
+                    {% include "conventions/actions/goto.html" %}
                 </div>
                 {% with bailleur_uuid=bailleur.uuid|slugify %}
                     <div class="fr-grid-row fr-grid-row--gutters">
