--- a/templates/conventions/recapitulatif/financement.html
+++ b/templates/conventions/recapitulatif/financement.html
@@ -9,11 +9,7 @@
                             Financements
                         </h4>
                     </div>
-                    {% if convention|display_convention_form_progressbar %}
-                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:financement' convention_uuid=convention.uuid %}" >
-                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                        </a>
-                    {% endif %}
+                    {% include "conventions/actions/goto.html" %}
                 </div>
                 <p class="fr-my-1w">Prêts & Subventions : </p>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
