--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -40,24 +40,14 @@
                     </p>
                     <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
                     <div class="block--row-strech">
-                        {% if total_avenants > 0 %}
-                            {% for avenant in avenants.paginated_conventions %}
-                                {% if forloop.last %}
-                                    {% if avenant|display_is_validated %}
-                                        <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
-                                            <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                                        </a>
-                                    {% else %}
-                                        <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
-                                            <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Un avenant est déjà en cours.
-                                        </button>
-                                    {% endif %}
-                                {% endif %}
-                            {% endfor %}
-                        {% else %}
+                        {% if convention|display_create_avenant %}
                             <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
                                 <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
                             </a>
+                        {% else %}
+                            <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
+                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Un avenant est déjà en cours.
+                            </button>
                         {% endif %}
                         <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
                             Consulter le récapitulatif
