aria-label and tests

--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -127,7 +127,7 @@
 
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered table--layout-fixed">
-                            <table>
+                            <table aria-label="Références cadastrales">
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
