--- a/templates/conventions/common/form_annexes.html
+++ b/templates/conventions/common/form_annexes.html
@@ -32,7 +32,7 @@
 
         {{ formset.management_form }}
         <div class="fr-table fr-table--bordered table--layout-fixed">
-            <table>
+            <table  aria-label="Annexes">
                 <thead>
                     <tr>
                         {% if convention|display_comments %}
