--- a/templates/conventions/common/form_stationnements.html
+++ b/templates/conventions/common/form_stationnements.html
@@ -26,7 +26,7 @@
 
         {{ formset.management_form }}
         <div class="fr-table fr-table--bordered table--layout-fixed">
-            <table>
+            <table  aria-label="Types de stationnement">
                 <thead>
                     <tr>
                         {% if convention|display_comments %}
