--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -103,7 +103,7 @@
                 </details>
                 {% if conventions.paginated_conventions %}
                     <div class="fr-table fr-table--bordered table--layout-fixed">
-                        <table>
+                        <table aria-label="Conventions">
                             {% if conventions.paginated_conventions.paginator.count != conventions.total_conventions %}
                                 <caption><em>{{ conventions.paginated_conventions.paginator.count }} convention{{ conventions.paginated_conventions.paginator.count|pluralize }} correspond{{ conventions.paginated_conventions.paginator.count|pluralize:'ent' }} à votre recherche</em></caption>
                             {% endif %}
