--- a/templates/conventions/recapitulatif/annexes.html
+++ b/templates/conventions/recapitulatif/annexes.html
@@ -13,7 +13,7 @@
                     {% include "conventions/actions/goto.html" %}
                 </div>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table>
+                    <table  aria-label="Annexes">
                         <thead>
                             <tr>
                                 {% if convention|display_comments %}
