--- a/templates/conventions/recapitulatif/stationnements.html
+++ b/templates/conventions/recapitulatif/stationnements.html
@@ -15,7 +15,7 @@
                     {% endif %}
                 </div>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table>
+                    <table aria-label="Types de stationnement">
                         <thead>
                             <tr>
                                 {% if convention|display_comments %}
