--- a/templates/conventions/common/form_logements.html
+++ b/templates/conventions/common/form_logements.html
@@ -23,7 +23,7 @@
 
         {{ formset.management_form }}
         <div class="fr-table fr-table--bordered table--layout-fixed">
-            <table id="lgts_table">
+            <table id="lgts_table"  aria-label="Logements">
                 <thead>
                     <tr>
                         {% if convention|display_comments %}
