--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -120,7 +120,7 @@
 
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered table--layout-fixed">
-                            <table>
+                            <table aria-label="Logement de l'EDD">
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
