--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -46,7 +46,7 @@
 
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered table--layout-fixed">
-                            <table>
+                            <table aria-label="Prêts">
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
