--- a/templates/conventions/recapitulatif/edd.html
+++ b/templates/conventions/recapitulatif/edd.html
@@ -22,7 +22,7 @@
                 </div>
                 <p class="fr-my-1w">EDD Simplifé : </p>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table>
+                    <table  aria-label="Logements de l'EDD">
                         <thead>
                             <tr>
                                 {% if convention|display_comments %}
