--- a/templates/conventions/recapitulatif/financement.html
+++ b/templates/conventions/recapitulatif/financement.html
@@ -13,7 +13,7 @@
                 </div>
                 <p class="fr-my-1w">Prêts & Subventions : </p>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table>
+                    <table  aria-label="Prêts">
                         <caption>Table des financements</caption>
                         <thead>
                             <tr>
