--- a/templates/conventions/recapitulatif/references_cadastrales.html
+++ b/templates/conventions/recapitulatif/references_cadastrales.html
@@ -16,7 +16,7 @@
                 </div>
                 {% include "common/display_text_and_files_if_exists.html" with text=programme.reference_cadastrale|get_text_from_textfiles file_list=programme.reference_cadastrale|get_files_from_textfiles %}
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table>
+                    <table aria-label="Références cadastrales">
                         <thead>
                             <tr>
                                 {% if convention|display_comments %}
