--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -127,7 +127,7 @@
 
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered table--layout-fixed">
-                            <table>
+                            <table aria-label="Références cadastrales">
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
@@ -195,7 +195,7 @@
                 {% include "common/required_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:cadastre' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" %}
                         {% include "common/button/previous.html" with precedent='conventions:programme' convention_uuid=convention.uuid %}
                     {% else %}
                         {% include "common/button/noteditable_button.html"%}
