--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,51 +1,56 @@
-<div class="fr-col-12 block--row-strech apilos-line-top fr-mb-2w fr-pt-2w">
-    <div class="block--row-strech-1 fr-mt-2w">
-        <p class="fr-alert__title">
-            Supprimer ce projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
-        </p>
-        <p class="fr-mb-0">
-            Vous vous êtes trompé lors de la création ?
-        </p>
+{% load custom_filters %}
+
+{% if convention|display_delete_convention:request %}
+    <div class="fr-col-12 block--row-strech fr-my-5w">
+        <div class="block--row-strech-1 fr-mt-2w">
+            <p class="fr-alert__title">
+                Supprimer ce projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
+            </p>
+            <p class="fr-mb-0">
+                Vous vous êtes trompé lors de la création ?
+            </p>
+        </div>
+        <button type="button" class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-fi-delete-line fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
+            Supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
+        </button>
     </div>
-    <button type="button" class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-fi-delete-line fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
-        Supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
-    </button>
-</div>
-<dialog aria-labelledby="fr-modal-{{convention.uuid}}-title" id="fr-modal-{{convention.uuid}}" class="fr-modal" role="dialog" >
-    <div class="fr-container fr-container--fluid fr-container-md">
-        <div class="fr-grid-row fr-grid-row--center">
-            <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                <div class="fr-modal__body">
-                    <div class="fr-modal__header">
-                        <button class="fr-link--close fr-link" aria-controls="fr-modal-{{convention.uuid}}">Fermer</button>
-                    </div>
-                    <div class="fr-modal__content">
-                        <h1 id="fr-modal-{{convention.uuid}}-title" class="fr-modal__title">
-                            <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                            {{ convention }}{% if convention.is_avenant %} - Avenant{% endif %}
-                        </h1>
-                        <p>Vous vous apprétez à supprimer {% if convention.is_avenant %}l'avenant à la convention{% else %}la convention{% endif %} "{{convention}}", êtes-vous sur de vouloir supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %} ?</p>
-                    </div>
-                    <div class="fr-modal__footer">
-                        <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
-                            <li>
-                                <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='delete_{{convention.uuid}}'>
-                                    Supprimer {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
-                                </button>
-                                <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                    document.addEventListener('DOMContentLoaded', function () {
-                                        document.getElementById('delete_{{convention.uuid}}')
-                                            .addEventListener('click', function(){ location.href="{% url 'conventions:delete' convention_uuid=convention.uuid %}" });
-                                    });
-                                </script>
-                            </li>
-                            <li>
-                                <button type="button" class="fr-btn fr-btn--secondary" aria-controls="fr-modal-{{convention.uuid}}">Annuler</button>
-                            </li>
-                        </ul>
+    <hr>
+    <dialog aria-labelledby="fr-modal-{{convention.uuid}}-title" id="fr-modal-{{convention.uuid}}" class="fr-modal" role="dialog" >
+        <div class="fr-container fr-container--fluid fr-container-md">
+            <div class="fr-grid-row fr-grid-row--center">
+                <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
+                    <div class="fr-modal__body">
+                        <div class="fr-modal__header">
+                            <button class="fr-link--close fr-link" aria-controls="fr-modal-{{convention.uuid}}">Fermer</button>
+                        </div>
+                        <div class="fr-modal__content">
+                            <h1 id="fr-modal-{{convention.uuid}}-title" class="fr-modal__title">
+                                <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                                {{ convention }}{% if convention.is_avenant %} - Avenant{% endif %}
+                            </h1>
+                            <p>Vous vous apprétez à supprimer {% if convention.is_avenant %}l'avenant à la convention{% else %}la convention{% endif %} "{{convention}}", êtes-vous sur de vouloir supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %} ?</p>
+                        </div>
+                        <div class="fr-modal__footer">
+                            <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
+                                <li>
+                                    <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='delete_{{convention.uuid}}'>
+                                        Supprimer {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
+                                    </button>
+                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                        document.addEventListener('DOMContentLoaded', function () {
+                                            document.getElementById('delete_{{convention.uuid}}')
+                                                .addEventListener('click', function(){ location.href="{% url 'conventions:delete' convention_uuid=convention.uuid %}" });
+                                        });
+                                    </script>
+                                </li>
+                                <li>
+                                    <button type="button" class="fr-btn fr-btn--secondary" aria-controls="fr-modal-{{convention.uuid}}">Annuler</button>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</dialog>
+    </dialog>
+{% endif %}
