--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -120,7 +120,7 @@
 
                         {{ formset.management_form }}
                         <div class="fr-table fr-table--bordered table--layout-fixed">
-                            <table>
+                            <table aria-label="Logement de l'EDD">
                                 <thead>
                                     <tr>
                                         {% if convention|display_comments %}
@@ -166,7 +166,7 @@
                 {% include "common/required_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:edd' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" %}
                         {% include "common/button/previous.html" with precedent='conventions:cadastre' convention_uuid=convention.uuid %}
                     {% else %}
                         {% include "common/button/noteditable_button.html"%}
