--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -9,15 +9,29 @@
         {% include "conventions/common/form_header.html"%}
         {% include "common/nav_bar.html" with nav_bar_step="action" %}
         <div class="fr-container fr-py-5w">
-            <div class="fr-col-md-12 fr-mt-2w fr-mb-4w">
-                <div role="alert" class="fr-alert fr-alert--success">
-                    {% if convention.televersement_convention_signee_le %}
-                        <p class="">Votre convention signée a été validée le <strong>{{convention.televersement_convention_signee_le}}</strong> <em>(Avec le numéro {{convention.numero}})</em>
-                        </p>
-                    {% else %}
-                        <p class="fr-alert__title">Votre convention signée a déjà été téléversée</p>
-                    {% endif %}
+            <div class="fr-col-12 fr-mt-2w fr-mb-4w">
+                <p class="fr-alert__title">
+                    Historique
+                </p>
+                <div class="fr-grid-row">
+                    <div class="apilos-step-post-action fr-mr-2w">
+                        <div class="apilos-step-post-action--bubble fr-mr-2w"></div>
+                        {% if total_avenants > 0 %}
+                            <div class="apilos-step-post-action--line"></div>
+                        {% endif %}
+                    </div>
+                    <div class="fr-col-11">
+                        {% if convention.televersement_convention_signee_le %}
+                            <div class="fr-grid-row">Convention signée le <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</strong></span></div>
+                        {% else %}
+                            <div class="fr-grid-row">Votre convention signée a déjà été téléversée</div>
+                        {% endif %}
+                        <div class="fr-mb-3w">
+                            <a class="fr-link" href="{% url 'conventions:preview' convention_uuid=convention.uuid %}"> Voir en PDF</a>
+                        </div>
+                    </div>
                 </div>
+                {% include "conventions/avenant_list.html" with conventions=avenants %}
             </div>
             <div class="fr-col-12 fr-mb-4w">
                 <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
@@ -26,17 +40,24 @@
                     </p>
                     <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
                     <div class="block--row-strech">
-                        <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
-                            <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                        </a>
+                        {% if convention|display_create_avenant %}
+                            <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                            </a>
+                        {% else %}
+                            <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
+                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Un avenant est déjà en cours.
+                            </button>
+                        {% endif %}
                         <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
                             Consulter le récapitulatif
                         </a>
                     </div>
                 </div>
             </div>
+            <hr>
             <div class="fr-col-12">
-                <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
+                <div class="fr-mb-2w fr-pt-2w block--row-strech">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
@@ -54,15 +75,17 @@
                 </div>
             </div>
             {% if convention|display_back_to_instruction:request %}
+                <hr>
                 <div class="fr-col-12">
-                    <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
+                    <div class="fr-mb-2w fr-pt-2w block--row-strech">
                         {% include "conventions/actions/back_to_instruction.html" %}
                     </div>
                 </div>
             {% endif %}
             <div class="fr-col-12">
                 {% if request|is_instructeur %}
-                    <div class="fr-mb-5w fr-pt-2w apilos-line-top">
+                    <hr>
+                    <div class="fr-mb-5w fr-pt-2w">
                         <div class="fr-my-2w">
                             <p class="fr-alert__title">
                                 Résiliation/dénonciation de la convention
@@ -77,7 +100,7 @@
                                         {% include "common/form/input_date.html" with form_input=resiliation_form.date_resiliation editable=True %}
                                     </div>
 
-                                    <button class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
+                                    <button class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-icon-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
                                         Résilier/Dénoncer la convention
                                     </button>
                                 </div>
@@ -93,7 +116,7 @@
                                             </div>
                                             <div class="fr-modal__content">
                                                 <h1 id="fr-modal-resiliate-{{convention.uuid}}-title" class="fr-modal__title">
-                                                    <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                                                    <span class="fr-icon-arrow-right-line fr-icon--lg"></span>
                                                     {{ convention }}
                                                 </h1>
                                                 <p>Vous vous apprétez à résilier/dénoncer la convention "{{convention}}", êtes-vous sûr ?</p>
@@ -101,7 +124,7 @@
                                             <div class="fr-modal__footer">
                                                 <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
                                                     <li>
-                                                        <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='resiliate_{{convention.uuid}}'>
+                                                        <button type="button" class="fr-btn fr-btn--icon-left fr-icon-delete-line" id='resiliate_{{convention.uuid}}'>
                                                             Résilier/dénoncer la convention
                                                         </button>
                                                         <script type="text/javascript" nonce="{{request.csp_nonce}}">
@@ -123,9 +146,6 @@
                     </div>
                 {% endif %}
             </div>
-            <div class="fr-mb-2w fr-pt-2w apilos-line-top"></div>
-            {% include "conventions/avenant_list.html" with conventions=avenants %}
-
             {% if request|is_instructeur %}
                 <div class="fr-accordion fr-mt-5w">
                     <div class="fr-accordion__title">
