--- a/templates/conventions/recapitulatif/annexes.html
+++ b/templates/conventions/recapitulatif/annexes.html
@@ -10,12 +10,10 @@
                             Annexes
                         </h4>
                     </div>
-                    <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
-                        <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                    </a>
+                    {% include "conventions/actions/goto.html" %}
                 </div>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table>
+                    <table  aria-label="Annexes">
                         <thead>
                             <tr>
                                 {% if convention|display_comments %}
