--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -10,17 +10,13 @@
                             Logements
                         </h4>
                     </div>
-                    {% if convention|display_convention_form_progressbar %}
-                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:logements' convention_uuid=convention.uuid %}" >
-                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                        </a>
-                    {% endif %}
+                    {% include "conventions/actions/goto.html" %}
                 </div>
                 <div class="block--row-strech">
                     {% include "common/display_field_if_exists.html" with label="Nombre de logements" value=lot.nb_logements object_field="lot__nb_logements__"|add:lot_uuid %}
                 </div>
                 <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                    <table>
+                    <table  aria-label="Logements">
                         <thead>
                             <tr>
                                 {% if convention|display_comments %}
