--- a/templates/conventions/recapitulatif/comments.html
+++ b/templates/conventions/recapitulatif/comments.html
@@ -8,11 +8,7 @@
                             Informations à l'attention du service instructeur
                         </h4>
                     </div>
-                    {% if convention|display_convention_form_progressbar %}
-                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:comments' convention_uuid=convention.uuid %}" >
-                            <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                        </a>
-                    {% endif %}
+                    {% include "conventions/actions/goto.html" %}
                 </div>
                 <div class="table--limited-height">
                     {% include "common/display_text_and_files_if_exists.html" with text=convention.comments|get_text_from_textfiles file_list=convention.comments|get_files_from_textfiles %}
